--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,79 @@ alembic==1.13.2
 certifi==2024.6.2
 charset-normalizer==3.3.2
 environs==11.0.0
+Faker==26.0.0
 greenlet==3.0.3
 idna==3.7
 Mako==1.3.5
 MarkupSafe==2.1.5
 marshmallow==3.21.3
-numpy==1.26.4
 packaging==24.1
 psycopg2==2.9.9
-Pympler==1.0.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 requests==2.32.3
+six==1.16.0
 SQLAlchemy==2.0.31
 typing_extensions==4.12.2
 urllib3==2.2.2
+aioquic==1.0.0
+alembic==1.13.2
+asgiref==3.8.1
+attrs==23.2.0
+blinker==1.8.2
+Brotli==1.1.0
+certifi==2024.6.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+cryptography==42.0.8
+environs==11.0.0
+Faker==26.0.0
+Flask==3.0.3
+greenlet==3.0.3
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+kaitaistruct==0.10
+ldap3==2.9.1
+Mako==1.3.5
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+mitmproxy==10.3.1
+mitmproxy-windows==0.5.2
+mitmproxy_rs==0.5.2
+msgpack==1.0.8
+packaging==24.1
+passlib==1.7.4
+protobuf==5.27.0
+psycopg2==2.9.9
+publicsuffix2==2.20191221
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydivert==2.1.0
+pylsqpack==0.3.18
+pyOpenSSL==24.1.0
+pyparsing==3.1.2
+pyperclip==1.8.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+requests==2.32.3
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
+service-identity==24.1.0
+six==1.16.0
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.31
+tornado==6.4
+typing_extensions==4.12.2
+urllib3==2.2.2
+urwid-mitmproxy==2.1.2.1
+Werkzeug==3.0.3
+wsproto==1.2.0
+zstandard==0.22.0
